Update to link Javascript/CSS files.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			DFA webpage for a given language: (01+10)*00 
 		-->
 		<title>DFA - Automata Theory</title>
-		<link rel="stylesheet"  href="./autotheorystyle.css" /> <!--Link to external css-->
+		<link rel="stylesheet"  href="autotheorystyle.css" /> <!--Link to external css-->
 		<script src="mydfa.js"></script>
 	</head>
 	<body>
