--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
 
 <html xmlns="http://www.w3.org/1999/xhtml">
 	<head>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=UA-147518032-2"></script>
+		<script>
+		  window.dataLayer = window.dataLayer || [];
+		  function gtag(){dataLayer.push(arguments);}
+		  gtag('js', new Date());
+
+		  gtag('config', 'UA-147518032-2');
+		</script>
+
 		<!--
 			Author: Joshua Oden
 			7 April 2017
